--- a/main.css
+++ b/main.css
@@ -1,9 +1,11 @@
-#app {
-  margin: 0% 30% 0% 30%;
-}
 #allTheButtons {
   margin-top: 2%;
 }
+
 #leaderboardTable {
-  margin-top:2%;
+  margin-top: 2%;
+}
+
+#formAndButtons {
+  margin: 0% 30% 0% 30%;
 }
