--- a/main.css
+++ b/main.css
@@ -13,3 +13,10 @@ table {
 #formAndButtons {
   margin: 0% 30% 0% 30%;
 }
+
+#theStats {
+  margin-top: 2%;
+}
+#headersForStats {
+  margin-top: 2%;
+}
